--- a/templates/home.html
+++ b/templates/home.html
@@ -38,7 +38,7 @@
           <div class="card-body">
             <h5 class="card-title">Patient Login</h5>
             <p class="card-text">Access your personal medical dashboard.</p>
-            <a href="{{url_for('auth.patient_login')}}" class="btn btn-primary w-100">Login</a>
+            <a href="{{url_for('main.patient_login')}}" class="btn btn-primary w-100">Login</a>
           </div>
         </div>
       </div>
@@ -49,7 +49,7 @@
           <div class="card-body">
             <h5 class="card-title">Staff Login</h5>
             <p class="card-text">For hospital staff and administrators.</p>
-            <a href="{{url_for('auth.staff_login')}}" class="btn btn-warning w-100 text-white">Login</a>
+            <a href="{{url_for('main.staff_login')}}" class="btn btn-warning w-100 text-white">Login</a>
           </div>
         </div>
       </div>
