Add all admin pages

--- a/templates/Admin/admin_dashboard.html
+++ b/templates/Admin/admin_dashboard.html
@@ -22,13 +22,13 @@
                         <a class="nav-link" href="{{url_for('admin.admin_doctors')}}">Doctors</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/patients">Patients</a>
+                        <a class="nav-link" href="{{url_for('admin.admin_patients')}}">Patients</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{url_for('admin.admin_departments')}}">Departments</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/appointments">Appointments</a>
+                        <a class="nav-link" href="{{url_for('admin.admin_appointements')}}">Appointments</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/logout">Logout</a>
