--- a/templates/Admin/admin_doctor_edit.html
+++ b/templates/Admin/admin_doctor_edit.html
@@ -36,14 +36,13 @@
         <div class="mb-3">
             <label for="about" class="form-label">About</label>
             <textarea class="form-control" id="about" name="about" rows="6" required
-            maxlength="1000"
             placeholder="Give a brief description"
             value="{{ doctor.about}}"></textarea>
             </textarea>
         </div>
 
         <!-- Submit & Back -->
-        <button type="submit" class="btn btn-primary">Create Doctor</button>
+        <button type="submit" class="btn btn-primary">Save Changes</button>
         <a href="{{ url_for('admin.admin_doctors') }}" class="btn btn-secondary ms-2">Back</a>
     </form>
 </div>
