Optimized admin routes, modified and added doctor routes

--- a/templates/Doctor/base.html
+++ b/templates/Doctor/base.html
@@ -15,14 +15,14 @@
     <div class="container-fluid">
         
         <!-- Brand -->
-        <a class="navbar-brand" href="{{ url_for('doctor.dashboard') }}">
+        <a class="navbar-brand" href="{{ url_for('doctor.doctor_dashboard') }}">
             Doctor Dashboard
         </a>
 
         <div class="d-flex">
 
             <!-- Edit Login Details -->
-            <a href="{{ url_for('doctor.edit_login_details') }}"
+            <a href="{{ url_for('doctor.doctor_edit_login_details') }}"
                class="btn btn-light btn-sm me-2">
                Edit Login Details
             </a>
