--- a/templates/Admin/admin_appointments.html
+++ b/templates/Admin/admin_appointments.html
@@ -59,7 +59,7 @@
                 <label class="form-label">Status</label>
                 <select name="status" class="form-select">
                     <option value="">All Status</option>
-                    <option value="upcoming"  {% if selected_status == "upcoming" %}selected{% endif %}>Upcoming</option>
+                    <option value="booked"  {% if selected_status == "booked" %}selected{% endif %}>Upcoming</option>
                     <option value="cancelled" {% if selected_status == "cancelled" %}selected{% endif %}>Cancelled</option>
                     <option value="completed" {% if selected_status == "completed" %}selected{% endif %}>Completed</option>
                 </select>
