--- a/templates/Admin/admin_patient_edit.html
+++ b/templates/Admin/admin_patient_edit.html
@@ -32,6 +32,17 @@
             </select>
         </div>
 
+        <!-- Date of Birth -->
+        <div class="mb-3">
+            <label for="dob" class="form-label">Date of Birth</label>
+            <input type="date"
+                   class="form-control"
+                   id="dob"
+                   name="dob"
+                   required
+                   value="{{ patient.dob }}">
+        </div>
+
         <!-- Phone -->
         <div class="mb-3">
             <label for="phone_no" class="form-label">Phone Number</label>
