--- a/templates/Admin/base.html
+++ b/templates/Admin/base.html
@@ -29,7 +29,7 @@
                         <a class="nav-link" href="{{url_for('admin.admin_departments')}}">Departments</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{url_for('admin.admin_appointements')}}">Appointments</a>
+                        <a class="nav-link" href="{{url_for('admin.admin_appointments')}}">Appointments</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/logout">Logout</a>
