--- a/templates/register.html
+++ b/templates/register.html
@@ -31,12 +31,26 @@
       <!-- Gender -->
       <div class="mb-3">
         <label for="gender" class="form-label">Gender</label>
-        <select class="form-select" id="gender" name="gender" value="{{ gender or '' }}" required>
+        <select class="form-select" id="gender" name="gender" required>
           <option value="" disabled selected>Select gender</option>
           <option value="Male">Male</option>
           <option value="Female">Female</option>
           <option value="Other">Other</option>
         </select>
+      </div>
+
+      <!-- Date of Birth -->
+      <div class="mb-3">
+        <label for="dob" class="form-label">Date of Birth</label>
+        <input 
+          type="date" 
+          class="form-control" 
+          id="dob" 
+          name="dob" 
+          value="{{ dob or '' }}"
+          required
+          max="{{ current_date }}"
+        >
       </div>
 
       <!-- Phone Number -->
