fixed bugs on doctor routes

--- a/templates/Admin/admin_doctors.html
+++ b/templates/Admin/admin_doctors.html
@@ -57,7 +57,7 @@
                         Blacklist
                     {% endif %}
                 </a>
-                <a href="{{ url_for('admin.admin_doctors_delete', doctor_id=doctor.doctor_id) }}" class="btn btn-danger btn-sm">Delete</a>
+                <a href="{{ url_for('admin.admin_doctors_edit', doctor_id=doctor.doctor_id) }}" class="btn btn-danger btn-sm">Delete</a>
             </td>
         </tr>
         {% else %}
