--- a/templates/Doctor/base.html
+++ b/templates/Doctor/base.html
@@ -28,7 +28,7 @@
             </a>
 
             <!-- Logout -->
-            <a href="{{ url_for('logout') }}" class="btn btn-light btn-sm">
+            <a href="{{ url_for('main.logout') }}" class="btn btn-light btn-sm">
                 Logout
             </a>
         </div>
