--- a/templates/Doctor/doctor_dashboard.html
+++ b/templates/Doctor/doctor_dashboard.html
@@ -6,7 +6,7 @@
 
 <!-- PROVIDE AVAILABILITY BUTTON -->
 <div class="mb-4 text-end">
-    <a href="{{ url_for('doctor.provide_availability') }}" 
+    <a href="{{ url_for('doctor.doctor_availability') }}" 
        class="btn btn-primary">
        Provide Availability
     </a>
