--- a/templates/Admin/admin_doctor_edit.html
+++ b/templates/Admin/admin_doctor_edit.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="container mt-5">
     <h2>Edit Doctor Profile</h2>
-    <form action="{{ url_for('admin.admin_create_doctor') }}" method="POST">
+    <form action="{{ url_for('admin.admin_doctors_edit',doctor_id=doctor.doctor_id) }}" method="POST">
         
         <!-- Doctor info -->
         <div class="mb-3">
@@ -21,7 +21,7 @@
             <select class="form-select" id="department" name="department_id" required>
                 <option value="" disabled selected>Select Department</option>
                 {% for dept in departments %}
-                    <option value="{{ dept.department_id }}">{{ dept.name }}</option>
+                    <option value="{{ dept.department_id }}" {% if dept.department_id == doctor.department_id %}selected{% endif %}>{{ dept.name }}</option>
                 {% endfor %}
             </select>
         </div>
@@ -36,9 +36,7 @@
         <div class="mb-3">
             <label for="about" class="form-label">About</label>
             <textarea class="form-control" id="about" name="about" rows="6" required
-            placeholder="Give a brief description"
-            value="{{ doctor.about}}"></textarea>
-            </textarea>
+            placeholder="Give a brief description">{{ doctor.about}}</textarea>
         </div>
 
         <!-- Submit & Back -->
