Milestone-HMS Admin-Dashboard-Management

--- a/templates/Doctor/doctor_availability.html
+++ b/templates/Doctor/doctor_availability.html
@@ -1,4 +1,4 @@
-{% extends "doctor_base.html" %}
+{% extends "Doctor/base.html" %}
 {% block title %}Set Availability{% endblock %}
 
 {% block content %}
