--- a/templates/Admin/admin_doctor_edit.html
+++ b/templates/Admin/admin_doctor_edit.html
@@ -13,6 +13,7 @@
             <input type="text" class="form-control" id="name" name="name" required
             maxlength="50"
             placeholder="Enter the Full Name"
+            pattern="[A-Za-z ]+" 
             value="{{ doctor.name }}">
         </div>
 
