--- a/templates/Admin/admin_patient_edit.html
+++ b/templates/Admin/admin_patient_edit.html
@@ -18,6 +18,7 @@
                    required
                    maxlength="50"
                    placeholder="Enter full name"
+                   pattern="[A-Za-z ]+" 
                    value="{{ patient.name }}">
         </div>
 
