--- a/templates/Admin/admin_doctor_create.html
+++ b/templates/Admin/admin_doctor_create.html
@@ -6,7 +6,6 @@
 <div class="container mt-5">
     <h2>Create New Doctor</h2>
     <form action="{{ url_for('admin.admin_create_doctor') }}" method="POST">
-        <!-- User info -->
         <div class="mb-3">
             <label for="email" class="form-label">Email</label>
             <input type="email" class="form-control" id="email" name="email" required
@@ -21,23 +20,24 @@
             required 
             maxlength="20" minlength="6"
             placeholder="Choose a username"
-            title="Username must be 6–20 characters long.">
+            title="Username must be 6–20 characters long and alphanumeric"
+            pattern="[A-Za-z0-9]+">
         </div>
 
         <div class="mb-3">
             <label for="password" class="form-label">Password</label>
             <input type="password" class="form-control" id="password" name="password" required
-            maxlength="50" minlength="8"
+            minlength="8"
             placeholder="Enter a password"
-            title="Password must be at least 8 characters long.">
+            title="Password must be at least 8 characters long and should only contain letters,numbers and special characters.">
         </div>
 
-        <!-- Doctor info -->
         <div class="mb-3">
             <label for="name" class="form-label">Full Name</label>
             <input type="text" class="form-control" id="name" name="name" required
             maxlength="50"
             placeholder="Enter the Full Name"
+            pattern="[A-Za-z ]+" 
             value="{{ name or '' }}">
         </div>
 
