--- a/templates/Patient/patient_edit_profile.html
+++ b/templates/Patient/patient_edit_profile.html
@@ -34,6 +34,7 @@
                                    value="{{ patient.name }}" 
                                    required 
                                    maxlength="50"
+                                   pattern="[A-Za-z ]+" 
                                    placeholder="Enter your full name">
                         </div>
 
@@ -79,6 +80,9 @@
                             <a href="{{ url_for('patient.patient_dashboard') }}" class="btn btn-secondary">Cancel</a>
                         </div>
                     </form>
+                </div>
+                <div class="card-footer text-muted small">
+                    You will be logged out after changing details.
                 </div>
             </div>
         </div>
