--- a/templates/register.html
+++ b/templates/register.html
@@ -24,6 +24,7 @@
           value="{{ name or '' }}" 
           required 
           maxlength="50" 
+          pattern="[A-Za-z ]+" 
           placeholder="Enter your full name"
         >
       </div>
@@ -95,8 +96,8 @@
           required 
           maxlength="20" minlength="6"
           placeholder="Choose a username"
-          title="Username must be 6–20 characters long."
-        >
+          title="Username must be 6–20 characters long and alphanumeric"
+          pattern="[A-Za-z0-9]+">
       </div>
 
       <!-- Password -->
@@ -108,9 +109,9 @@
           id="password" 
           name="password" 
           required 
-          maxlength="50" minlength="8"
+          minlength="8"
           placeholder="Enter a password"
-          title="Password must be at least 8 characters long."
+          title="Password must be at least 8 characters long and should only contain letters,numbers and special characters."
         >
       </div>
 
