Milestone-HMS Validation

--- a/templates/Patient/patient_change_login.html
+++ b/templates/Patient/patient_change_login.html
@@ -30,7 +30,8 @@
                             placeholder="Enter your username"
                             value="{{ user.username }}"
                             required
-                            maxlength="50"
+                            maxlength="20"
+                            minlength="6"
                             title="Username must be 6–20 characters long and alphanumeric"
                             pattern="[A-Za-z0-9]+">
                 </div>
