--- a/templates/Patient/base.html
+++ b/templates/Patient/base.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{% block title %}Patient Dashboard{% endblock %}</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 </head>
 <body>
 
@@ -34,7 +36,7 @@
   </div>
 </nav>
 
-<div class="container mt-4">
+<div class="container mt-3">
   {% with messages = get_flashed_messages(with_categories=true) %}
     {% if messages %}
       {% for category, message in messages %}
@@ -46,7 +48,10 @@
     {% endif %}
   {% endwith %}
 
-  {% block content %}{% endblock %}
+</div>
+<div class="container mt-4">
+  {% block content %}
+  {% endblock %}
 </div>
 
 </body>
