Milestone-HMS Charts

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,10 @@
 {% extends "main/base.html" %}
-{% block title %}Hospital Portal{% endblock %}
+{% block title %}MedPulse{% endblock %}
 
 {% block content %}
 
 <div class="text-center mt-5">
-  <h1 class="mb-4">Welcome to Our Hospital System</h1>
+  <h1 class="mb-4">Welcome to MedPulse</h1>
   <p class="lead mb-5">Please choose an option below to continue.</p>
 
   <div class="row justify-content-center g-4">
