--- a/templates/Admin/base.html
+++ b/templates/Admin/base.html
@@ -45,6 +45,14 @@
         {% block content %}
         {% endblock %}
     </div>
+    <footer class="bg-primary text-white py-3 mt-4">
+        <div class="container text-center">
+            <small>
+            &copy; {{ current_year if current_year else "2025" }} MedPulse —
+            All Rights Reserved
+            </small>
+        </div>
+    </footer>
 
 </body>
 </html>
