--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>{% block title %}Hospital Portal{% endblock %}</title>
+  <title>{% block title %}MedPulse{% endblock %}</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
         rel="stylesheet">
@@ -12,7 +12,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container">
-    <a class="navbar-brand fw-bold" href="{{ url_for('main.home') }}">Hospital Portal</a>
+    <a class="navbar-brand fw-bold" href="{{ url_for('main.home') }}">MedPulse</a>
   </div>
 </nav>
 
@@ -35,6 +35,14 @@
   {% endblock %}
 
 </div>
+<footer class="bg-primary text-white py-3 mt-4">
+  <div class="container text-center">
+    <small>
+      &copy; {{ current_year if current_year else "2025" }} MedPulse —
+      All Rights Reserved
+    </small>
+  </div>
+</footer>
 
 </body>
 </html>
